I did apply 42 format in the minishell header and it moved the readline headers, which resulted in a error, so I fixed that. Also reduced the number of line on problematic functions

--- a/lexing/Makefile
+++ b/lexing/Makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: ccodere <ccodere@student.42quebec.com>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/11 12:55:17 by ccodere           #+#    #+#              #
-#    Updated: 2024/10/11 12:55:19 by ccodere          ###   ########.fr        #
+#    Updated: 2024/10/13 09:55:37 by ccodere          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,6 +22,8 @@ HEADER = lexing.h
 SRCS 	= characterizer.c \
 		tokenizer.c \
 		trimmer.c \
+		redirection.c \
+		var_expansion.c \
 
 OBJECTS = $(SRCS:.c=.o)
 
