--- a/commands/Makefile
+++ b/commands/Makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: ccodere <ccodere@student.42quebec.com>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/11 12:55:15 by ccodere           #+#    #+#              #
-#    Updated: 2024/10/11 12:55:16 by ccodere          ###   ########.fr        #
+#    Updated: 2024/10/13 22:14:17 by ccodere          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,7 @@ SRCS 	= cd.c \
 		ft_check_cmd_path.c \
 		ft_commands.c \
 		pwd.c \
-
+		executable.c\
 
 OBJECTS = $(SRCS:.c=.o)
 
