can print our own env, some fixe on errors msg

--- a/commands/Makefile
+++ b/commands/Makefile
@@ -6,7 +6,7 @@
 #    By: ccodere <ccodere@student.42quebec.com>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/11 12:55:15 by ccodere           #+#    #+#              #
-#    Updated: 2024/10/18 13:19:19 by ccodere          ###   ########.fr        #
+#    Updated: 2024/10/20 10:59:46 by ccodere          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,6 +26,7 @@ SRCS 	= ft_commands.c \
 		  echo.c \
 		  pwd.c \
 		  executable.c\
+		  env.c \
 
 OBJECTS = $(SRCS:.c=.o)
 
